# midas-journal-673

./: CMakeLists.txt  Reg2dMultiresTest.cxx  itkRatioVarianceImageToImageMetric.h  itkRatioVarianceImageToImageMetric.txx
